_src-lp/blocks/columns/columns.scss
/* ... */
.columns-container.outlined-image .columns {
  padding: 1em 2em;
}

.columns-container.outlined-image .columns > div > div:first-of-type {
  padding: 0;
}

.columns-container.outlined-image .columns > div > div:first-of-type h4 {
  margin: 0;
  font-size: 28px;
  line-height: 32px;
}

.columns-container.outlined-image .columns > div > div:first-of-type p {
  font-size: 14px;
  line-height: 18px;
  margin: 0;
}

.columns-container.outlined-image .columns > div > div:first-of-type p strong {
  font-size: 18px;
  line-height: 23px;
}

.columns-container.outlined-image .columns > div > div:first-of-type hr {
  width: 95px;
  height: 0;
  border: 0.5px solid #006EFF;
  margin: 10px 0;
}

.columns-container.outlined-image .columns > div > .columns-img-col--left {
  position: relative;
  height: stretch;
}

.columns-container.outlined-image .columns > div > .columns-img-col--left img {
  box-sizing: border-box;
  height: calc(100% + 70px);
  position: absolute;
  top: -35px;
  margin: auto;
  left: 0;
  right: 0;
}

.columns-container.they-wear-our-faces {
  background: linear-gradient(180deg, rgb(0 0 0 / 100%) 0%, rgb(0 42 96 / 100%) 50%);
  border: none !important;
}

.columns-container.table-btns table {
  margin: 15px 0;
}

.columns-container.table-btns table:first-of-type tr {
  display: flex;
}

.columns-container.table-btns table a {
  min-width: 200px;
  height: auto !important;
  padding: 10px 20px !important;
  background: #e72325;
  color: #fff;
  display: inline-block;
  text-align: center;
  font-size: 14px;
  font-weight: bold;
  transition: background-color 0.2s;
  width: auto;
  border-style: none;
  cursor: pointer;
  border-radius: 20px;
  margin-right: 5px;
}

.columns-container.table-btns table tr td:last-of-type a {
  background-color: white;
  color: #006dff;
  margin-right: 0;
  margin-left: 5px;
}

.columns-container.table-btns table tr td p {
  margin: 0;
}

.columns-container.table-btns table tr em {
  font-size: 14px;
  display: block;
  margin-left: 25px;
  margin-top: 5px;
}

.columns-container.table-btns table img, .columns-container.table-btns table .icon, .columns-container.table-btns table svg {
  width: 23px;
}

.columns-container.table-btns table img {
  margin: 0 3px;
}

.columns-container.v-nov25 .columns {
  padding: 2em 6em 3em;
}

.columns-container.v-nov25.spaced .columns {
  padding: 2em calc(var(--bs-gutter-x) * .5) 3em;
}

.columns-container.v-nov25.spaced .columns div.text-content {
  padding: 0;
}

.columns-container.v-nov25.spaced .columns div.text-content .icon {
  margin-bottom: 10px;
}

.columns-container.v-nov25 .columns h3 {
  font-size: 32px;
  color: #111;
  text-transform: none;
  margin: 0;
  padding: 0;
}

.columns-container.v-nov25 .columns > div:first-of-type .text-content {
  min-height: auto!important;
  padding-top: 0;
}

.columns-container.v-nov25 .columns > div:first-of-type .text-content ul {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 10px;
  margin-bottom: 0;
  padding: 0;
}

.columns-container.v-nov25 .columns > div:first-of-type .text-content ul li {
  background-color: white;
  border-radius: 20px;
  list-style-type: none;
  padding: 2px 30px;
}

.columns-container.v-nov25 .columns > div:not(:first-of-type) {
  padding: 0;
  gap: 2em;
  margin: 1em 0;
  align-items: stretch; 
}

.columns-container.v-nov25 .columns > div:not(:first-of-type) p {
  margin: 0;
}

.columns-container.v-nov25 .columns > div:not(:first-of-type) p img, .columns-container.v-nov25 .columns > div:not(:first-of-type) table img {
  height: 28px;
  width: auto;
  min-width: auto;
  max-width: max-content;
}

.columns-container.white-cards .columns > div:not(:first-of-type) > div {
  background-color: white;
}

.columns-container.light-grey-cards .columns > div:not(:first-of-type) > div {
  background-color: var(--light-grey-color);
}

.columns-container.bblue-cards .columns > div:not(:first-of-type) > div {
  background-color: #EFF9FF;
}

.columns-container.v-nov25 .columns > div:not(:first-of-type) > div {
  border-radius: 10px;
  padding: 1.5em;
}

.columns-container.v-nov25 .columns > div:not(:first-of-type) > div h4 {
  font-size: 16px;
}

.columns-container.v-nov25 .columns > div:not(:first-of-type) > div p {
  font-size: 14px;
  line-height: 19px;
  color: #525252;
}

.columns-container.v-nov25.black-text .columns > div:not(:first-of-type) > div p {
  color: black;
}

.columns-container.v-nov25 .columns > div:not(:first-of-type) table img, .columns-container.v-nov25 .columns > div:not(:first-of-type) table span.icon {
  margin-right: 10px;
}

.columns-container.v-nov25 .columns > div:not(:first-of-type) table td {
  font-size: 20px;
  line-height: 25px;
}

.columns-container.compare .columns > div {
  padding: 0;
}

.columns-container.compare .columns > div > div:nth-of-type(2)  {
  margin: 0 15px;
}

.columns-container.compare .columns >div > div:first-of-type {
  padding-left: 20px;
}

.columns-container.compare .columns > div:first-of-type {
  background-color: var(--light-grey-color);
}

.columns-container.compare.new2025 .columns > div:first-of-type {
  background-color: #FFF;
}

.columns-container.compare .columns > div > div:not(:first-of-type) > div {
  text-align: center;
}

.columns-container.compare .columns > div > div:not(:first-of-type) > div .icon {
  width: auto;
  height: 14px;
}

.columns-container.compare:not(.new2025) .columns > div:first-of-type > div:nth-of-type(2) {
  background-color: var(--darker-blue-color);
  color: white;
  border: 1px solid var(--darker-blue-color);
  border-top-left-radius: 8px;
  border-top-right-radius: 8px;
}

.columns-container.compare:not(.new2025) .columns > div:not(:first-of-type) > div {
  border-left: 1px solid var(--light-grey-color);
  border-right: 1px solid var(--light-grey-color);
}
/* ... */

